--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "c0ae3da5-a377-47da-aa87-7951a4544abd"
+      "id": "5dcac373-883f-44e2-81b1-f71fa454e379"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "6e83b104-d262-4e11-bdad-b5db09e63c6e"
+      "id": "0ac1100a-01d2-4eb1-a9a8-e9a33152e088"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "f5ad9027-78b2-4842-b9da-aaf74175abc2"
+      "id": "dc479e60-7714-4464-8a4c-ffd91f094bc3"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "2850630c-6772-4c4e-ac93-79542dd95f9b"
+      "id": "4920bed0-205d-4c3d-981e-1f8a38d6aa6c"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "a9c7726d-005c-42b7-aeb3-bdb343dc3c37"
+      "id": "d1cb484b-d821-4146-9e31-b084041b86c6"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "5b6370e4-68fe-4d08-8d72-71e4bb15c00c"
+      "id": "5b6da41e-3438-46a0-8114-ed3e3e6235fb"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "a492ae42-8337-47da-bf8a-444798a77ade"
+      "id": "256c3f2a-fb64-4c18-8be2-3458806e9df9"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "b81822d9-ecc7-4107-876d-7f1a97d4a083"
+      "id": "abfddb4d-239b-4f23-8123-4b20fef5d902"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "560a7e18-9526-4eb8-ba9c-7e2602578ed0"
+      "id": "8fcd2c4a-e93a-4f9f-b4d3-016c9e6e8367"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "ecc1fbb0-4699-4d51-b678-1f15160fa0ca"
+      "id": "79d2cec4-01e8-44e4-ad27-3f58888d41f3"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "a9eeb896-5977-4fd9-8ca7-c1b38898b793"
+      "id": "da344271-5010-4934-8e00-5b7e0acf6cec"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "d1518fce-cb6a-47ec-a0fb-cd72b186db19"
+      "id": "0e903551-aca5-4a45-b7df-c19bd0525e4c"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "7bdc9da2-e4ab-4512-8bf8-aea480c54be7"
+      "id": "bb03699b-c879-4c21-847b-edbfb362f2b5"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "36d4a0b1-44c3-490f-ae2f-7fd8393a8843"
+      "id": "97e8d119-4df1-4e6c-8ace-f5a45a3e5a96"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "014bfa69-faca-4541-be28-2c7a0b09958c"
+      "id": "a80b444f-708a-4fb1-8eda-8e4028de6fc9"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "c3962552-066b-4e66-a986-497113722e40"
+      "id": "9ae6dc59-be3b-4772-9fbd-97b3acbc6361"
     },
     {
       "cell_type": "code",
