--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "73670633-962b-4113-aa06-653f4b5e9acf"
+      "id": "059af977-980f-4e48-b8ec-620d19b7c866"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "b5be1fc9-de38-4590-ae7b-a09881d582b4"
+      "id": "4c4026ff-109b-4f50-9259-d1c93f49a3da"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "26b4768d-2f8a-4d1f-b211-e58eaf81a997"
+      "id": "5270775d-5cfc-48cc-ab2e-87c092cd8a55"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "6bc2a2b2-651e-49d5-ae62-001b65dfeda0"
+      "id": "3d7fb654-6552-47da-af4d-8adec452a1ea"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "dd0ca7e5-5ea0-4905-8583-8378497737f7"
+      "id": "efd6b1cf-9559-4a75-87f2-ed40649d0aac"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "bad6b019-8f41-4cd7-943d-3ba7d644388c"
+      "id": "0b1c1407-6d5a-442f-93b4-3f13bdd06ed6"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "45868c58-c190-4c93-a3ee-401ded3cf1f7"
+      "id": "1ea7c4ad-56ba-4193-9939-e91f768564f0"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "6b1b4d3a-5d80-4eb8-bbef-4285cb5cd48a"
+      "id": "3fc1b2d3-db72-488d-958e-651159317d02"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "2c2925ef-599e-4cd3-9bc1-76a69f1b1e56"
+      "id": "af57755b-c44e-4c1b-b62e-beec56c91ca5"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "d695d448-d596-4491-b9f3-3ceddd8a59a6"
+      "id": "da377ce8-a5a4-4c4a-9fdd-4215c2c63d75"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "030080f0-4261-4608-bb96-58edc3a43346"
+      "id": "479332f1-f77f-4ee9-8fa3-3dba382bd4ca"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "676feab3-b80d-46f4-a66c-3ae07090c441"
+      "id": "25479255-2219-4488-957a-a2d1b7e73bce"
     },
     {
       "cell_type": "code",
@@ -491,15 +491,71 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix}\n",
+        "1.2200 & 0.4900 \\\\\n",
+        "1.1700 & 0.4400 \\\\\n",
+        "1.2100 & -0.4500 \\\\\n",
+        "1.2000 & -0.5000 \\\\\n",
+        "-1.2000 & 0.5100 \\\\\n",
+        "-1.2300 & 0.4800 \\\\\n",
+        "-1.2000 & -0.4800 \\\\\n",
+        "-1.1900 & -0.4900 \\\\\n",
+        "0.2000 & 0.0000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
+        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
+        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
+        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
+        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
+        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
+        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
+        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
+        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
+        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
+        "1.2100 \\\\\n",
+        "1.2500 \\\\\n",
+        "1.1000 \\\\\n",
+        "1.1100 \\\\\n",
+        "1.1200 \\\\\n",
+        "1.1300 \\\\\n",
+        "1.1400 \\\\\n",
+        "1.1200 \\\\\n",
+        "3.6000\n",
+        "\\end{bmatrix} +\\begin{bmatrix}\n",
+        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
+        "\\end{bmatrix}\\\\ \\\\\n",
+        "=~& \\begin{bmatrix}\n",
+        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
+        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
+        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
+        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
+        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
+        "\\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
+        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
+        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
+        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
+        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
+        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
+        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
+        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
+        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
+        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
+        "\\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -516,7 +572,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "4ffdea56-58fa-4d02-9880-fc9282de1f9e"
+      "id": "298c40aa-b9d0-4f57-bba0-8c1315896abc"
     },
     {
       "cell_type": "code",
@@ -636,7 +692,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "a4189ced-2fcf-4810-bdac-fa98453e2eb5"
+      "id": "9ccf2646-e62e-4df9-ac8b-973f6bd6cf21"
     },
     {
       "cell_type": "code",
@@ -657,7 +713,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "8087da10-0bba-4b07-b557-3e40b3e5d469"
+      "id": "c4485798-3afc-4cef-aa38-1fe2a29651cd"
     },
     {
       "cell_type": "code",
@@ -692,7 +748,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "5613bd52-8897-439e-983c-7ab51477787e"
+      "id": "d68c696b-fb3a-4bee-a606-9dbe62e9cb2d"
     },
     {
       "cell_type": "code",
@@ -744,7 +800,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "66fd4246-5d3b-4f62-9a8a-e20a24abdfba"
+      "id": "45e88a3a-2eed-4eca-a9f2-33959e2b54ed"
     },
     {
       "cell_type": "code",
@@ -769,7 +825,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "566da823-1a73-4c62-ae0f-7d79624087cc"
+      "id": "ada7e4ad-819e-4b35-893f-d276bd1756a5"
     },
     {
       "cell_type": "code",
@@ -811,7 +867,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "f09b1f4c-ed09-4c3f-8648-1a1c69b8d471"
+      "id": "7d04da71-f270-441c-a21b-9ae33193caf7"
     },
     {
       "cell_type": "code",
@@ -834,7 +890,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "2f258cd2-e383-48a2-942c-7a1901611b9d"
+      "id": "c681ac00-2497-45cf-a0b1-aef02fef3f32"
     },
     {
       "cell_type": "code",
@@ -866,7 +922,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "fce0d2ca-17a5-42a0-9ae3-75be81267fd8"
+      "id": "481e18c5-8d5d-4d70-a1d2-73fa0bb14760"
     },
     {
       "cell_type": "code",
@@ -886,7 +942,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "32291bf8-ac46-41a2-b5bd-615ecb63ad08"
+      "id": "81fbaede-1bd4-41e5-8ffc-874fed8bbe15"
     },
     {
       "cell_type": "code",
@@ -920,7 +976,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "f6800fcf-5547-4277-910e-583b392f0a8a"
+      "id": "93356fb1-fd5b-417d-8a80-7891b2eba8fb"
     },
     {
       "cell_type": "code",
@@ -941,7 +997,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "5a9147d2-fbd9-4635-ae0e-8214646843b3"
+      "id": "0f93fca9-697d-4808-bd97-6b4054937ac5"
     },
     {
       "cell_type": "code",
@@ -973,7 +1029,7 @@
       "source": [
         "(update)"
       ],
-      "id": "44c8e718-6cca-47ab-a59f-a916187e576e"
+      "id": "eebabe78-1d05-4cbc-bd42-d266ceb07bfe"
     },
     {
       "cell_type": "code",
@@ -993,7 +1049,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "97e567d7-9241-4e38-aba8-851207083622"
+      "id": "ef44b578-5ce2-4226-bc50-39e0fa93ee27"
     },
     {
       "cell_type": "code",
@@ -1025,7 +1081,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "fe6421a0-d340-4f60-939e-7fe91158cc65"
+      "id": "0e56add7-6ae2-4299-af01-24b86881e093"
     },
     {
       "cell_type": "code",
@@ -1045,7 +1101,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "1c15444d-dd15-4d51-b558-cbadfe84307c"
+      "id": "292afc4a-db80-4e3a-ac1d-5e53bc5a481a"
     },
     {
       "cell_type": "code",
@@ -1077,7 +1133,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "ea6ac0dc-f8b7-42a9-bc12-c0dfc84d6619"
+      "id": "ff450a12-c23c-4edd-8c71-034e0542671b"
     },
     {
       "cell_type": "code",
@@ -1143,7 +1199,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "64207fcf-3ac1-4190-bfbc-b8081d78075b"
+      "id": "a920ce94-d9b8-4f30-ae94-3809f53c89a1"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1236,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "dbce57ba-0f6c-48f2-b8ba-5c53fefeba48"
+      "id": "78bcc3ac-0e38-43b5-98e4-b892f80f4380"
     },
     {
       "cell_type": "code",
@@ -1234,7 +1290,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "268d91f4-7a04-4a71-9fcc-c87e5a190a5f"
+      "id": "7a3bcf64-4cef-45dc-926b-f2201df2bf57"
     },
     {
       "cell_type": "code",
@@ -1254,7 +1310,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "fa52a953-afd5-443c-886e-6170fbbc75e6"
+      "id": "2ae78e0f-509d-4e3c-8489-ec17d6721ba4"
     },
     {
       "cell_type": "code",
@@ -1294,7 +1350,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "2172d597-2636-4656-891e-a46f0c84fc30"
+      "id": "1f5a9832-e024-4704-82ba-6840bdeaca16"
     },
     {
       "cell_type": "code",
@@ -1314,9 +1370,98 @@
       "source": [
         "## H. `NaN` 에 대한 예측 – 숙제\n",
         "\n",
-        "# 5. HW"
+        "# 5. HW\n",
+        "\n",
+        "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "7a02de7a-5a3b-4b4e-b115-ed0228ceda05"
+      "id": "724dbfd4-b71e-4464-936f-1765f6dfc2fc"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1169,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "df_view = pd.read_csv('https://raw.githubusercontent.com/guebin/DL2024/main/posts/solo.csv',index_col=0)\n",
+        "df_train = df_view.stack().reset_index().set_axis(['W','M','y'],axis=1)\n",
+        "w = {'옥순(IN)':0, '영자(IN)':1, '정숙(IS)':2, '영숙(IS)':3, '순자(EN)':4, '현숙(EN)':5, '서연(ES)':6, '보람(ES)':7, '하니(I)':8}\n",
+        "m = {'영식(IN)':0, '영철(IN)':1, '영호(IS)':2, '광수(IS)':3, '상철(EN)':4, '영수(EN)':5, '규빈(ES)':6, '다호(ES)':7}\n",
+        "X1 = torch.tensor(df_train['W'].map(w)) # length-n vector \n",
+        "X2 = torch.tensor(df_train['M'].map(m)) # length-n vector \n",
+        "E1 = torch.nn.functional.one_hot(X1).float()\n",
+        "E2 = torch.nn.functional.one_hot(X2).float()\n",
+        "y = torch.tensor(df_train['y']).float().reshape(-1,1)\n",
+        "#--#\n",
+        "torch.manual_seed(43052)\n",
+        "l1 = torch.nn.Linear(in_features=9, out_features=2, bias=False)\n",
+        "b1 = torch.nn.Linear(in_features=9, out_features=1, bias=False)\n",
+        "l2 = torch.nn.Linear(in_features=8, out_features=2, bias=False)\n",
+        "b2 = torch.nn.Linear(in_features=8, out_features=1, bias=False)\n",
+        "sig = torch.nn.Sigmoid()\n",
+        "loss_fn = torch.nn.MSELoss()\n",
+        "params = list(l1.parameters())+list(b1.parameters())+list(l2.parameters())+list(b2.parameters())\n",
+        "optimizr = torch.optim.Adam(params, lr=0.1) \n",
+        "#--#\n",
+        "for epoc in range(100):\n",
+        "    ## step1 \n",
+        "    W_features = l1(E1)\n",
+        "    W_bias = b1(E1)\n",
+        "    M_features = l2(E2) \n",
+        "    M_bias = b2(E2)\n",
+        "    score = (W_features * M_features).sum(axis=1).reshape(-1,1) + W_bias + M_bias\n",
+        "    yhat = sig(score) * 5 \n",
+        "    ## step2 \n",
+        "    loss = loss_fn(yhat,y)\n",
+        "    ## step3 \n",
+        "    loss.backward()\n",
+        "    ## step4 \n",
+        "    optimizr.step()\n",
+        "    optimizr.zero_grad()"
+      ],
+      "id": "aeddc768-783d-4987-a1f8-63b26a6d5c08"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
+      ],
+      "id": "74ee174e-0316-45eb-a5bf-f26cdd9c89de"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1178,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "df_test = pd.DataFrame({'W':['옥순(IN)','보람(ES)','하니(I)'],'M':['영식(IN)','다호(ES)','영호(IS)']})\n",
+        "df_test"
+      ],
+      "id": "ad9a7607-4228-4047-b0c1-83a037653b92"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**hint** 답은 아래와 같다."
+      ],
+      "id": "9b0b6cd4-a768-4537-9d50-50c334476381"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1183,
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "yyhat.data"
+      ],
+      "id": "8d59c0a5-f053-4685-b306-3b9209c394df"
     }
   ],
   "nbformat": 4,
